# c_game

./: .gitignore  .gitmodules  Cargo.toml  readme.md
assets/tmx/: medieval_cities.tsx  modern_cities.tsx  terrain.tsx  terrain1.tsx  untitled.tmx
engine/: Cargo.toml  build.rs
engine/src/: app.rs  draw.rs  error.rs  init.rs  lib.rs  surface.rs
engine/src/map/: map.rs
engine/src/util/: math.rs  mod.rs
game/: Cargo.toml
game/src/: app.rs  main.rs  my_app.rs
game/src/gfx/: draw.rs  mod.rs
game/src/map/: map.rs
game/src/name_generator/: mod.rs  name_generator.rs
tmx_parser/: Cargo.toml
tmx_parser/examples/: demo.tmx  platform.tmx
tmx_parser/src/: lib.rs  map.rs  mod.rs  tile_error.rs  tile_layer.rs  tile_set.rs  types.rs
tmx_parser/tests/: map_test.rs
