[package]
name = "game"
version = "0.1.0"
authors = ["Liam Oliver-Mallory <liam.olivermallory@gmail.com>"]

[dependencies]
#tmx_parser = {path = "../tmx_parser"}
rand = "0.4.2"
#piston_window = "0.79.0"
log = {version = "0.4.1"} #off,error,warn,info,debug,trace
env_logger = "0.5.9"
engine = {"path" = "../engine"}